apps/kube-system/cilium/gateway/ciliumgateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ciliumgateway
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.lucadev.de
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.1.169
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 9080
      hostname: "*.lucadev.de"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 9443
      hostname: "*.lucadev.de"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: home-lucadev-de-wildcard-cert
